--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -5,6 +5,8 @@
     background-color: #000;
     color: #fff;
     border-top: 5px solid white;
+    margin: 5px 0;
+    font-weight: 600;
 }
 
 .button:hover {
