--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -6,7 +6,12 @@
     width: 200px;
     height: 250px;
     border-radius: 10px;
-    background-color: rgb(63, 17, 136);
+    background-color: rgb(136, 17, 17);
     color: white;
     padding: 10px 15px;
+    opacity: 75%;
+}
+
+.card .button {
+    opacity: 100%;
 }
